add services , about sections with their styles

--- a/index.html
+++ b/index.html
@@ -119,5 +119,116 @@
         </div>
     </section>
 
+    <!-- ========================
+         Services Section
+    ========================= -->
+    <section class="services">
+        <div class="container">
+            <div class="section-header">
+                <div class="section-title">
+                    <h3 class="title">How does it work</h3>
+                    <p class="description">The full monty spiffing good time no biggie cack grub fantastic.</p>
+                </div>
+                <div class="section-btn">
+                    <button class="main-btn">
+                        View all Features
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="services-grid">
+                <div class="service-card card-1">
+                    <div class="icon">
+                        <i class="fas fa-bolt"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="service-card card-2">
+                    <div class="icon">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="service-card card-3">
+                    <div class="icon">
+                        <i class="fas fa-link"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="service-card card-4">
+                    <div class="icon">
+                        <i class="fas fa-bell"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="service-card card-5">
+                    <div class="icon">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="service-card card-6">
+                    <div class="icon">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <h4 class="card-title">Fast and intuitive</h4>
+                    <p>Oxford posh bevvy give us a bell gutted mate spend a penny quaint cockup plastered.</p>
+                    <a href="#">Read Mor<i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- ========================
+        About Section
+    ========================= -->
+    <section class="about">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-img">
+                    <img src="assets/images/about-thumb.png" alt="about image">
+                </div>
+                <div class="about-text">
+                    <span>Marketing</span>
+                    <div class="section-title">
+                        <h3 class="title">Make a lasting impression with appie.</h3>
+                    <p>Jolly good quaint james bond victoria sponge happy days cras arse over blatant.</p>
+                    </div>
+                    <div class="about-box">
+                        <div class="item">
+                            <div class="icon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                            <div class="text">
+                                <h4 class="title">Carefully designed</h4>
+                                <p>Mucker plastered bugger all mate morish are.</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="icon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                            <div class="text">
+                                <h4 class="title">Choose a App</h4>
+                                <p>Mucker plastered bugger all mate morish are.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
