add features,counter sections with their styles

--- a/index.html
+++ b/index.html
@@ -229,6 +229,71 @@
             </div>
         </div>
     </section>
+
+    <!-- ========================
+       Features Section
+    ========================= -->
+    <section class="features" id="features">
+         <div class="container">
+            <div class="section-title">
+                <h3 class="title">Wherever you need <br> us the most</h3>
+                <p class="description">The full monty spiffing good time no biggie cack grub fantastic.</p>
+            </div>
+            <div class="features-content">
+                <div class="features-list">
+                      <div class="features-item feature-1 active">
+                          <h4 class="title">Well Integrated</h4>
+                          <p>The bee's knees chancer car boot absolutely.</p>
+                      </div>
+                      <div class="features-item feature-2">
+                        <h4 class="title">Clean and modern Design</h4>
+                        <p>The bee's knees chancer car boot absolutely.</p>
+                    </div>
+                    <div class="features-item feature-3">
+                        <h4 class="title">Light and dark mode</h4>
+                        <p>The bee's knees chancer car boot absolutely.</p>
+                    </div>
+                </div>
+                <div class="features-img">
+                      <img src="assets/images/features-thumb-2.png" alt="features image">
+                </div>
+            </div>
+         </div>
+    </section>
+
+    <!-- ========================
+       Counter Section
+    ========================= -->
+    <section class="counter" id="counter">
+        <div class="container">
+            <div class="section-title">
+                <h3 class="title">How does it work</h3>
+                <p class="description">The full monty spiffing good time no biggie cack grub fantastic.</p>
+            </div>
+            <div class="counter-list">
+                <div class="counter-item">
+                    <div class="icon"><img src="assets/images/icons/counter-icon-1.svg" alt="icon 1"></div>
+                    <h3 class="title">45k+</h3>
+                    <p>Active Installation</p>
+                </div>
+                <div class="counter-item">
+                    <div class="icon"><img src="assets/images/icons/counter-icon-2.svg" alt="icon 2"></div>
+                    <h3 class="title">108k+</h3>
+                    <p>Active Installation</p>
+                </div>
+                <div class="counter-item">
+                    <div class="icon"><img src="assets/images/icons/counter-icon-3.svg" alt="icon 3"></div>
+                    <h3 class="title">307k+</h3>
+                    <p>Active Installation</p>
+                </div>
+                <div class="counter-item">
+                    <div class="icon"><img src="assets/images/icons/counter-icon-4.svg" alt="icon 4"></div>
+                    <h3 class="title">725k+</h3>
+                    <p>Active Installation</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
