add video,download sections with their styles

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                     <img src="assets/images/about-thumb.png" alt="about image">
                 </div>
                 <div class="about-text">
-                    <span>Marketing</span>
+                    <span class="tag">Marketing</span>
                     <div class="section-title">
                         <h3 class="title">Make a lasting impression with appie.</h3>
-                    <p>Jolly good quaint james bond victoria sponge happy days cras arse over blatant.</p>
+                        <p>Jolly good quaint james bond victoria sponge happy days cras arse over blatant.</p>
                     </div>
                     <div class="about-box">
                         <div class="item">
@@ -234,18 +234,18 @@
        Features Section
     ========================= -->
     <section class="features" id="features">
-         <div class="container">
+        <div class="container">
             <div class="section-title">
                 <h3 class="title">Wherever you need <br> us the most</h3>
                 <p class="description">The full monty spiffing good time no biggie cack grub fantastic.</p>
             </div>
             <div class="features-content">
                 <div class="features-list">
-                      <div class="features-item feature-1 active">
-                          <h4 class="title">Well Integrated</h4>
-                          <p>The bee's knees chancer car boot absolutely.</p>
-                      </div>
-                      <div class="features-item feature-2">
+                    <div class="features-item feature-1 active">
+                        <h4 class="title">Well Integrated</h4>
+                        <p>The bee's knees chancer car boot absolutely.</p>
+                    </div>
+                    <div class="features-item feature-2">
                         <h4 class="title">Clean and modern Design</h4>
                         <p>The bee's knees chancer car boot absolutely.</p>
                     </div>
@@ -255,10 +255,10 @@
                     </div>
                 </div>
                 <div class="features-img">
-                      <img src="assets/images/features-thumb-2.png" alt="features image">
+                    <img src="assets/images/features-thumb-2.png" alt="features image">
                 </div>
             </div>
-         </div>
+        </div>
     </section>
 
     <!-- ========================
@@ -294,6 +294,76 @@
             </div>
         </div>
     </section>
+
+    <!-- ========================
+       Video Section
+    ========================= -->
+    <section class="video" id="video">
+        <div class="container">
+            <div class="video-content">
+                <div class="thumb">
+                    <img src="assets/images/video-thumb-1.jpg" alt="video thumb">
+                    <a href="#" class="player"><i class="fas fa-play"></i></a>
+                </div>
+                <div class="slider">
+                    <div class="slide">
+                        <img src="assets/images/video-slide-1.jpg" alt="slide 1">
+                    </div>
+                    <div class="slider-arrows">
+                        <div class="prev">
+                            <i class="fas fa-arrow-left"></i>
+                        </div>
+                        <div class="next">
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3 class="title">
+                        Watch the two-minute video to learn how.
+                    </h3>
+                    <p>
+                        The wireless cheesed on your bike mate zonked a load of old tosh hunky dory it's all gone to pot haggle william car boot pear shaped geeza.
+                    </p>
+                    <button class="main-btn">Get Started</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========================
+       Download Section
+    ========================= -->
+    <section class="download" id="download">
+        <div class="container">
+            <div class="content">
+                <span class="tag">
+                    Download Our App
+                </span>
+                <h3 class="title">
+                    App is available <br>for free on app store
+                </h3>
+                <p>
+                    Jolly good quaint james bond victoria sponge happy days cras arse over blatant.
+                </p>
+                <div class="download-links">
+                     <a href="#" class="link-1">
+                        <i class="fab fa-apple"></i>
+                        <span>
+                            Download for <span class="platform">ios</span>
+                        </span>
+                     </a>
+                     <a href="#" class="link-2">
+                        <i class="fab fa-google-play"></i>
+                        <span>
+                            Download for <span class="platform">Android</span>
+                        </span>
+                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
