add pricing,testimotional sections with their styles

--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
                         Watch the two-minute video to learn how.
                     </h3>
                     <p>
-                        The wireless cheesed on your bike mate zonked a load of old tosh hunky dory it's all gone to pot haggle william car boot pear shaped geeza.
+                        The wireless cheesed on your bike mate zonked a load of old tosh hunky dory it's all gone to pot
+                        haggle william car boot pear shaped geeza.
                     </p>
                     <button class="main-btn">Get Started</button>
                 </div>
@@ -347,23 +348,175 @@
                     Jolly good quaint james bond victoria sponge happy days cras arse over blatant.
                 </p>
                 <div class="download-links">
-                     <a href="#" class="link-1">
+                    <a href="#" class="link-1">
                         <i class="fab fa-apple"></i>
                         <span>
                             Download for <span class="platform">ios</span>
                         </span>
-                     </a>
-                     <a href="#" class="link-2">
+                    </a>
+                    <a href="#" class="link-2">
                         <i class="fab fa-google-play"></i>
                         <span>
                             Download for <span class="platform">Android</span>
                         </span>
-                     </a>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- ========================
+       Pricing Section
+    ========================= -->
+    <section class="pricing" id="pricing">
+        <div class="container">
+            <div class="section-title">
+                <h3 class="title">
+                    Simple pricing for Everyone
+                </h3>
+                <p class="description">
+                    The full monty spiffing good time no biggie cack grub fantastic.
+                </p>
+            </div>
+            <div class="tabs">
+                <a href="#" class="tab-link active">Monthly</a>
+                <a href="#" class="tab-link">Yearly</a>
+            </div>
+            <div class="pricing-cards">
+                <div class="pricing-card">
+                    <h6>Fresh</h6>
+                    <p class="price"><sup>$</sup> 04<sub>/month</sub></p>
+                    <p class="desc">Get your 14 day free trial</p>
+                    <ul class="pricing-list">
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            60-day chat history
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            15 GB cloud storage
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            24/7 Support
+                        </li>
+                    </ul>
+                    <button class="main-btn">Choose plan</button>
+                </div>
+                <div class="pricing-card">
+                    <span class="badge">
+                        Most Popular
+                   </span>
+                    <h6>Sweet</h6>
+                    <p class="price"><sup>$</sup> 16<sub>/month</sub></p>
+                    <p class="desc">
+                        Billed $276 per website annually.
+                    </p>
+                    <ul class="pricing-list">
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            60-day chat history
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            15 GB cloud storage
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            24/7 Support
+                        </li>
+                    </ul>
+                    <button class="main-btn active">Choose plan</button>
+                </div>
+                <div class="pricing-card">
+                    <h6>Juicy</h6>
+                    <p class="price"><sup>$</sup> 27<sub>/month</sub></p>
+                    <p class="desc">
+                        Billed $276 per website annually.
+                    </p>
+                    <ul class="pricing-list">
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            60-day chat history
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            Data security
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            100 GB cloud storage
+                        </li>
+                        <li>
+                            <span class="icon">
+                                <i class="fas fa-check"></i>
+                            </span>
+                            24/7 Support
+                        </li>
+                    </ul>
+                    <button class="main-btn">Choose plan</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========================
+       Testimotional Section
+    ========================= -->
+    <section class="testimotional">
+        <div class="container">
+            <div class="slider">
+                <div class="slide">
+                     <div class="author">
+                        <img src="assets/images/people/customer-1.jpg" alt="author image">
+                        <div class="rate">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span>(4.7) review</span>
+                     </div>
+                     <div class="review">
+                         <p>
+                            Why I say old chap that is spiffing chip shop such a fibber the bee's knees, the wireless Richard fantastic do one cracking goal pukka baking cakes starkers mush don't get shirty with me argy bargy, I naff chimney pot blimey he lost his bottle cup.
+                         </p>
+                         <div class="author-info">
+                            <h5 class="title">Hanson Deck</h5>
+                            <span>Web developer</span>
+                         </div>
+                     </div>
+                </div>
+                <div class="slider-arrows">
+                    <div class="prev">
+                        <i class="fas fa-arrow-left"></i>
+                    </div>
+                    <div class="next">
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
