add sponser,footer sections with their styles

--- a/index.html
+++ b/index.html
@@ -517,6 +517,136 @@
             </div>
         </div>
     </section>
+
+    <!-- ========================
+       Sponser Section
+    ========================= -->
+    <section class="sponser" id="sponser">
+        <div class="container">
+            <div class="section-title">
+                <h3 class="title">
+                    Appie works best with<br>your favorite platforms
+                </h3>
+                <p class="description">
+                    Join over 40,000 businesses worldwide.
+                </p>
+            </div>
+            <div class="sponser-items">
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-1.png" alt="sponser 1">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-2.png" alt="sponser 2">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-3.png" alt="sponser 3">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-4.png" alt="sponser 4">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-5.png" alt="sponser 5">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-6.png" alt="sponser 6">
+                </div>
+            </div>
+            <div class="sponser-items sponsers-2">
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-7.png" alt="sponser 7">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-8.png" alt="sponser 8">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-9.png" alt="sponser 9">
+                </div>
+                <div class="sponser-item">
+                    <img src="assets/images/sponsers/sponser-10.png" alt="sponser 10">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ========================
+       Footer Section
+    ========================= -->
+    <footer>
+        <div class="container">
+           <div class="content">
+            <div class="footer-about">
+                <div class="logo">
+                    <img src="assets/images/logo.png" alt="logo image">
+                </div>
+                <p>Appie WordPress is theme is the last theme you will ever have.</p>
+                <a href="#">Read More <i class="fas fa-arrow-right"></i></a>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-company">
+                <h4 class="title">
+                    Company
+                </h4>
+                <ul class="footer-links-list">
+                    <li><a href="#" class="link">About Us</a></li>
+                    <li><a href="#" class="link">Service</a></li>
+                    <li><a href="#" class="link">Case Studies</a></li>
+                    <li><a href="#" class="link">Blog</a></li>
+                    <li><a href="#" class="link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-support">
+                <h4 class="title">
+                    Company
+                </h4>
+                <ul class="footer-links-list">
+                    <li><a href="#" class="link">Community</a></li>
+                    <li><a href="#" class="link">Resources</a></li>
+                    <li><a href="#" class="link">Faqs</a></li>
+                    <li><a href="#" class="link">Privacy Policy</a></li>
+                    <li><a href="#" class="link">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h4 class="title">
+                    Get In Touch
+                </h4>
+                <ul class="footer-links-list">
+                    <li><a href="#">
+                        <i class="far fa-envelope"></i>
+                        support@appie.com
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fas fa-phone"></i>
+                        +(642) 342 762 44
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fas fa-map-marker-alt"></i>
+                        442 Belle Terre St Floor 7, San Francisco, AV 4206
+                    </a></li>
+                </ul>
+            </div>
+            <div class="footer-copyright">
+                <div class="download-buttons">
+                    <a href="#" class="btn-1">
+                        <i class="fab fa-apple"></i>
+                        Download for ios
+                    </a>
+                    <a href="#" class="btn-2">
+                        <i class="fab fa-google-play"></i>
+                        Download for Android
+                    </a>
+                </div>
+                <p>
+                    Copyright © 2021 Appie. All rights reserved.
+                </p>
+            </div>
+           </div>
+        </div>
+    </footer>
 </body>
 
 </html>
